Article View Model completed

--- a/ProjectTakeoff/app/src/main/res/layout/fragment_read_article.xml
+++ b/ProjectTakeoff/app/src/main/res/layout/fragment_read_article.xml
@@ -35,7 +35,7 @@
                     android:layout_marginEnd="16dp"
                     android:layout_marginBottom="16dp"
                     android:fontFamily="@font/montserrat_medium"
-                    android:text=">"
+                    android:text="Next"
                     android:textSize="20sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -100,7 +100,7 @@
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="16dp"
                     android:fontFamily="@font/montserrat_medium"
-                    android:text="<"
+                    android:text="Prev"
                     android:textSize="20sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
