--- a/ProjectTakeoff/app/src/main/res/layout/fragment_read_article.xml
+++ b/ProjectTakeoff/app/src/main/res/layout/fragment_read_article.xml
@@ -28,7 +28,7 @@
                 android:layout_height="match_parent">
 
                 <Button
-                    android:id="@+id/buttonNext"
+                    android:id="@+id/btnNext"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
@@ -39,7 +39,7 @@
                     android:textSize="20sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/txtSummary" />
+                    app:layout_constraintTop_toBottomOf="@+id/txtContent" />
 
                 <ImageView
                     android:id="@+id/imgArticleImage"
@@ -78,7 +78,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/txtTitle" />
 
                 <TextView
-                    android:id="@+id/txtSummary"
+                    android:id="@+id/txtContent"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
@@ -104,7 +104,7 @@
                     android:textSize="20sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/txtSummary" />
+                    app:layout_constraintTop_toBottomOf="@+id/txtContent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
