--- a/ProjectTakeoff/app/src/main/res/navigation/main_navigation.xml
+++ b/ProjectTakeoff/app/src/main/res/navigation/main_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_navigation"
-    app:startDestination="@id/articleListFragment">
+    app:startDestination="@id/loginFragment">
 
     <fragment
         android:id="@+id/readArticleFragment"
@@ -22,5 +22,30 @@
         <action
             android:id="@+id/action_articleListFragment_to_readArticleFragment"
             app:destination="@id/readArticleFragment" />
+        <action
+            android:id="@+id/action_articleListFragment_to_profileFragment"
+            app:destination="@id/profileFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/loginFragment"
+        android:name="com.ubaya.projecttakeoff.view.LoginFragment"
+        android:label="fragment_login"
+        tools:layout="@layout/fragment_login" >
+        <action
+            android:id="@+id/action_loginFragment_to_articleListFragment"
+            app:destination="@id/articleListFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_registerFragment"
+            app:destination="@id/registerFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/registerFragment"
+        android:name="com.ubaya.projecttakeoff.view.RegisterFragment"
+        android:label="fragment_register"
+        tools:layout="@layout/fragment_register" />
+    <fragment
+        android:id="@+id/profileFragment"
+        android:name="com.ubaya.projecttakeoff.view.ProfileFragment"
+        android:label="fragment_profile"
+        tools:layout="@layout/fragment_profile" />
 </navigation>
