ProfileFragment logout progress

--- a/ProjectTakeoff/app/src/main/res/navigation/main_navigation.xml
+++ b/ProjectTakeoff/app/src/main/res/navigation/main_navigation.xml
@@ -34,7 +34,7 @@
         <action
             android:id="@+id/action_loginFragment_to_articleListFragment"
             app:destination="@id/articleListFragment"
-            app:popUpTo="@id/articleListFragment"
+            app:popUpTo="@id/loginFragment"
             app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_loginFragment_to_registerFragment"
@@ -56,6 +56,8 @@
         tools:layout="@layout/fragment_profile" >
         <action
             android:id="@+id/action_profileFragment_to_loginFragment"
-            app:destination="@id/loginFragment" />
+            app:destination="@id/loginFragment"
+            app:popUpTo="@id/profileFragment"
+            app:popUpToInclusive="true" />
     </fragment>
 </navigation>
