Register back fix

--- a/ProjectTakeoff/app/src/main/res/navigation/main_navigation.xml
+++ b/ProjectTakeoff/app/src/main/res/navigation/main_navigation.xml
@@ -44,13 +44,7 @@
         android:id="@+id/registerFragment"
         android:name="com.ubaya.projecttakeoff.view.RegisterFragment"
         android:label="fragment_register"
-        tools:layout="@layout/fragment_register" >
-        <action
-            android:id="@+id/action_registerFragment_to_loginFragment"
-            app:destination="@id/loginFragment"
-            app:popUpTo="@id/registerFragment"
-            app:popUpToInclusive="true" />
-    </fragment>
+        tools:layout="@layout/fragment_register" />
     <fragment
         android:id="@+id/profileFragment"
         android:name="com.ubaya.projecttakeoff.view.ProfileFragment"
