--- a/ProjectTakeoff/app/src/main/res/layout/fragment_register.xml
+++ b/ProjectTakeoff/app/src/main/res/layout/fragment_register.xml
@@ -137,7 +137,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/montserrat"
-                android:hint="Confirm Password" />
+                android:hint="Confirm Password"
+                android:password="true" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
